@@ -39,14 +39,21 @@ CFLAGS		+= -I$(TOPDIR)/sched
 
 ASRCS		= 
 CSRCS		= up_boot.c up_leds.c up_ssp.c
+
 ifeq ($(CONFIG_NSH_ARCHINIT),y)
 CSRCS		+= up_nsh.c
 endif
+
 ifeq ($(CONFIG_USBSTRG),y)
 CSRCS		+= up_usbstrg.c
 endif
+
 ifeq ($(CONFIG_NX_LCDDRIVER),y)
 CSRCS		+= up_lcd.c
+endif
+
+ifeq ($(CONFIG_ARCH_BUTTONS),y)
+CSRCS		+= up_buttons.c
 endif
 
 AOBJS		= $(ASRCS:.S=$(OBJEXT))
